<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

  <EditText
      android:id="@+id/emailId"
      android:layout_width="320dp"
      android:layout_height="80dp"
      android:layout_marginTop="50dp"
      android:hint="@string/email"
      android:gravity="center"
      android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/emailId"
        android:hint="@string/password"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="320dp"
        android:layout_height="80dp" />
    <Button
        android:id="@+id/login"
        android:text="@string/login"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>